# SENTINEL

./: .gitignore  README.md  REFERENCES.md  pyproject.toml
src/sentinel/: __init__.py
src/sentinel.egg-info/: SOURCES.txt
src/sentinel/core/: __init__.py  constants.py  coord_frame_transform.py  drag.py  orbital_elem_conv.py  time_utils.py
src/sentinel/rpo/: __init__.py  lambert.py
tests/core_tests/: test_orbital_elem_conv.py  test_time_utils.py
tests/rpo_tests/: __init__.py  test_lambert.py
