[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.1"
description = "Spaceflight mechanics library for orbit propagation, perturbation modeling, and rendezvous proximity operations"
authors = [{name = "Brian Witanowski"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "astropy>=5.0",
    "pymap3d>=3.0",
]